== 2.1.0

* (mvz) Ensure require 'reek' is enough to use reek's classes
* (mvz) Pick config file that comes first alphabetically
* (mvz) Separate FeatureEnvy and UtilityFunction

== 2.0.4

* (chastell)  Recognise .reek as a valid configuration file

== 2.0.3

* (mvz) Make NestedIterators handle super with arguments
* (mvz) Handle shadow block arguments
* (CoralineAda) Allow all formatters to support -U (wiki links)
* (tuexss) Make defaults transparent in help message

== 2.0.2

* (troessner) Fix version command

== 2.0.1

* (leonelgalan) Add support for json reports
* (chastell) Escape Regexp-like Strings on CodeContext matches (Bug https://github.com/troessner/reek/pull/397)

== 2.0.0

* (troessner) Revise, improve & refactor our Rspec matcher and remove smell_of
* (guilhermesimoes) Fix generating HTML report
* (mvz) Re-organize CLI options
* (maser) Fix file arguments without TTY
* (marcofognog) Make NestedIterator not break if iterator is called on super
* (troessner) Revamp & refactor our rake task

== 1.6.3

* (mvz) Support ruby 2.2

== 1.6.2

* (mvz) Fix rake task bug when no config file was given explicitly.
* (troessner) Run on working directory when no source is given.

== 1.6.1

* (mvz) Fix regression in rake task: Provide alias for backward compatibility

== 1.6.0

* (troessner) Revise configuration handling:
  Now there are 3 ways of passing reek a configuration file:
  - Using the cli "-c" switch
  - Having a file ending with .reek either in your current working directory or in a parent directory (more on that later)
  - Having a file ending with .reek in your HOME directory
  The order in which reek tries to find such a configuration file is exactly like above: First reek checks if we have given it a configuration file explicitly via CLI. Then it checks the current working directory for a file and if it can't find one, it traverses up the directories until it hits the root directory. And lastly, it checks your HOME directory.