@@ -1,3 +1,7 @@
+== unreleased
+
+* (sauliusgrigaitis) Add support for Checkstyle XML reports
+
 == 2.1.0
 
 * (mvz) Ensure require 'reek' is enough to use reek's classes
